--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,7 +25,14 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        VERSION=${{ steps.version.outputs.version }}
+    - name: Scan Image with Trivy
+      uses: aquasecurity/trivy-action@0.20.0
+      with:
+        image-ref: ghcr.io/muhammadwaqasrazaq/devscops:latest
+        severity: CRITICAL,HIGH
+        ignore-unfixed: true
+        exit-code: "0"
+        timeout: '15m0s'  # <--- Add this line to give it 15 minutes        VERSION=${{ steps.version.outputs.version }}
         docker build --no-cache \
           -t ghcr.io/muhammadwaqasrazaq/devscops:$VERSION \
           -t ghcr.io/muhammadwaqasrazaq/devscops:latest \
@@ -67,6 +74,3 @@ jobs:
 
     - name: Wait for Rollout
       run: kubectl rollout status deployment/devsecops-app
-    
-
- 
